fix alignment?

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,24 +2,16 @@ body {
     background-color: #ccc;
 }
 
-h1 {
-    text-align: center;
-    font-family: sans-serif;
-    font-weight: normal;
-}
-
-ul {
-    list-style-type: none;
-    font-family: sans-serif;
-}
-p {
-    text-align: justify;
-    text-indent: 3em;
-}
-
 div {
     margin: auto;
     max-width: 35em;
+}
+
+figcaption {
+    font-family: sans-serif;
+    font-size: 0.9em;
+    font-weight: bold;
+    text-align: justify;
 }
 
 .footer {
@@ -30,7 +22,24 @@ div {
     text-align: center;
 }
 
+h1 {
+    font-family: sans-serif;
+    font-weight: normal;
+    text-align: center;
+}
+
 img {
-    max-width: 100%;
     height: auto;
+    max-width: 100%;
+}
+
+p {
+    font-family: sans-serif;
+    text-align: justify;
+    text-indent: 3em;
+}
+
+ul {
+    font-family: sans-serif;
+    list-style-type: none;
 }
